Bug 411736 - Impossible to remove email address unless I modify another user account setting at the same time
Summary: Impossible to remove email address unless I modify another user account setti...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_users (other bugs)
Version First Reported In: 5.17.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-09 01:23 UTC by Patrick Silva
Modified: 2020-01-22 20:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-09-09 01:23:48 UTC
STEPS TO REPRODUCE
1. open system settings > account details > user manager 
2. type an email address to your user account
3. click on "Apply" button, type your password and press enter/return to confirm
4. close the User Manager and reopen it
5. clear the email address field (notice that "Apply" button remains greyed out)
6. close system settings (no prompt to save/discard the change shows up).
7. reopen the User Manager (Notice that the email address field is still showing your email)
8. clear the email address filed and modify another user account setting (real name, for example)
9. click on "Apply" button, type your password and press enter/return to confirm
10. close the User Manager and reopen it: now the email address field is empty


EXPECTED RESULT
email address field can always be cleared

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.16.5
KDE Frameworks Version: 5.61.0
Qt Version: 5.13.1
Comment 1 Nate Graham 2020-01-21 16:38:54 UTC
Looks like the password field doesn't accept an empty string as valid input that can cause the Apply button to become enabled
Comment 2 Méven Car 2020-01-22 20:28:42 UTC
Git commit 386f6771d287a0092ae9f1d588068ac2e0854079 by Méven Car.
Committed on 22/01/2020 at 20:28.
Pushed by meven into branch 'Plasma/5.18'.

Consider empty email valid

Summary:
FIXED-IN: 5.18

Test Plan:
1. open system settings > account details > user manager
2. type an email address to your user account
3. click on "Apply" button, type your password and press enter/return to confirm
4. close the User Manager and reopen it
5. clear the email address field
6. Apply

The empty email is saved.

Reviewers: #plasma, ngraham

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26824

M  +1    -1    src/accountinfo.cpp

https://commits.kde.org/user-manager/386f6771d287a0092ae9f1d588068ac2e0854079
Comment 3 Méven Car 2020-01-22 20:30:50 UTC
Git commit 89ecae72aa14ac21cc990eedaf8e8f679e1a7e1c by Méven Car.
Committed on 22/01/2020 at 20:30.
Pushed by meven into branch 'master'.

Warn user when changing selected user about potential data loss

Summary: CCBUG: 411736

Reviewers: ngraham, #plasma

Reviewed By: ngraham

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26844

M  +13   -0    src/accountinfo.cpp

https://commits.kde.org/user-manager/89ecae72aa14ac21cc990eedaf8e8f679e1a7e1c