Consider empty email valid

Summary:
BUG: 411736
FIXED-IN: 5.18

Test Plan:
1. open system settings > account details > user manager
2. type an email address to your user account
3. click on "Apply" button, type your password and press enter/return to confirm
4. close the User Manager and reopen it
5. clear the email address field
6. Apply

The empty email is saved.

Reviewers: #plasma, ngraham

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26824